Dixie - Free and Simple CMS
Created by Luthfie a.k.a. 9r3i
luthfie@y7mail.com

--------------------------------
Version 3.0.4 - May 5th 2015
- Fix get category function
- Remove old official comment of files

--------------------------------
Version 3.0.3 - May 4th 2015
- Fix few error

--------------------------------
Version 3.0.2 - April 30th 2015
- Fix few error

--------------------------------
Version 3.0.1 - April 24th 2015
- Fix few error

--------------------------------
Version 3.0.0 - April 21st 2015
- Remove ROOT replaced by DROOT
- Upgrade content editor - CKeditor v4.4.7
- Add jQuery UI 1.11.4
- Change jQuery version to 2.1.3
- Add icon by font awesome
- Add registry icon
- Add date picker
- Add UI menu re-order + action
- Add UI sidebar re-order + action
- Use checkbox bootstrap
- Add filter limit posts 10 to 1000
- Add UI for upload files
- Create english manual v2.4
- Create indonesia manual v2.4
- Rearrange form with table
- Change admin theme to Black
- Optimizing css and html tags
- Add mobile content editor nicEdit
- Extend locale database
- Implement template feature as Mueeza
- Auto load theme edit page
- Add plugin edit page and the action data
- New Theme added as default (Dixie 3)
  + DCV >= 3.0
  + Has more optional template file

--------------------------------
Version 2.4.1 - March 18th 2015
- Fix few error and miss-spelling

--------------------------------
Version 2.4.0 - March 17th 2015
- Upgrade Ldb class to version 2.5.0
- More save by adding few functions in Ldb
- Ldb-manual file in: engine/Ldb2-readme.txt

--------------------------------
Version 2.3.2 - December 25th 2014
- Add locale Sunda

--------------------------------
Version 2.3.1 - December 18th 2014
- Fix a few errors

--------------------------------
Version 2.3.0 - December 17th 2014
- Add locale package
- Add locale script in several admin files

--------------------------------
Version 2.2.3 - December 8th 2014
- Add function to generate training date